<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.RegisterActivity">

    <ImageView
        android:id="@+id/register_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:scaleType="fitXY"
        android:src="@drawable/muslim_chat_mariage"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/registr_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/register_img"
        android:drawableLeft="@mipmap/ic_email"
        android:drawableStart="@mipmap/ic_email"
        android:textColorHint="@color/purple_700"
        android:textColor="@color/purple_700"
        android:layout_margin="@dimen/_8sdp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/registr_email"
        android:drawableLeft="@mipmap/ic_password"
        android:drawableStart="@mipmap/ic_password"
        android:textColorHint="@color/purple_700"
        android:textColor="@color/purple_700"
        android:layout_margin="@dimen/_8sdp" />

    <EditText
        android:id="@+id/register_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        android:drawableLeft="@mipmap/ic_password"
        android:drawableStart="@mipmap/ic_password"
        android:textColorHint="@color/purple_700"
        android:textColor="@color/purple_700"
        android:layout_margin="@dimen/_8sdp" />

    <EditText
        android:id="@+id/register_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/register_confirm"
        android:drawableLeft="@mipmap/ic_avatar"
        android:drawableStart="@mipmap/ic_avatar"
        android:textColorHint="@color/purple_700"
        android:textColor="@color/purple_700"
        android:layout_margin="@dimen/_8sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/redister_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:text="@string/create_new_account"
        android:textStyle="bold"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toBottomOf="@id/register_fname"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_3sdp"/>

    <TextView
        android:id="@+id/register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/redister_register"
        android:gravity="center"
        android:textColor="@color/purple_700"

        android:padding="@dimen/_6sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>