<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.SplashScreen">

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_app_icon"/>

    <TextView
        android:id="@+id/splash_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/splash_image"/>

    <TextView
        android:id="@+id/splash_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:layout_below="@id/splash_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/created_by" />

    <TextView
        android:id="@+id/splash_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:layout_below="@id/splash_created"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/eng_alaa_ezz_eldin"
        android:textStyle="bold"
        android:textSize="@dimen/_13ssp"/>

</RelativeLayout>